--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="/styles.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/37fb0164a8.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
