--- a/pay.html
+++ b/pay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/invest.css">
+    <link rel="stylesheet" href="invest.css">
     <script src="https://kit.fontawesome.com/37fb0164a8.js" crossorigin="anonymous"></script>
     <title>Payment Gateway</title>
 </head>
@@ -106,6 +106,6 @@
    </div> 
 
 
-   <script src="./invest.js"></script>
+   <script src="invest.js"></script>
 </body>
 </html>
