--- a/pay.html
+++ b/pay.html
@@ -47,7 +47,7 @@
 
                 <div class="inputBox">
                     <label for="name">cards accepted</label>
-                  <img src="./img/payment.png" alt="">
+                  <img src="payment.png" alt="">
                 </div>
 
                 <div class="inputBox">
