--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     </div>
 
     <div class="home-img">
-        <img src="img/logo.jpg" alt="">
+        <img src="logo.jpg" alt="">
     </div>
 </section>
 
 <!-- about section  -->
  <section class="about" id="about">
     <div class="about-img">
-        <img src="img/hero.jpg" alt="">
+        <img src="hero.jpg" alt="">
     </div>
 
     <div class="about-content">
@@ -111,7 +111,7 @@ Swiftmoove was founded on the principles of integrity, expertise, and personaliz
 
     <div class="port-container">
         <div class="port-box">
-            <img src="img/shipping.jpg" alt="">
+            <img src="shipping.jpg" alt="">
             <div class="port-layer">
                 <h4>drop shipping</h4>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, a.</p>
@@ -119,7 +119,7 @@ Swiftmoove was founded on the principles of integrity, expertise, and personaliz
             </div>
         </div>
             <div class="port-box">
-                <img src="img/fx.jpg" alt="">
+                <img src="fx.jpg" alt="">
                 <div class="port-layer">
                     <h4>foreign exchange</h4>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, a.</p>
@@ -128,7 +128,7 @@ Swiftmoove was founded on the principles of integrity, expertise, and personaliz
             </div>
                 
                 <div class="port-box">
-                    <img src="img/amazon.jpg" alt="">
+                    <img src="amazon.jpg" alt="">
                     <div class="port-layer">
                         <h4>amazon</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, a.</p>
@@ -137,7 +137,7 @@ Swiftmoove was founded on the principles of integrity, expertise, and personaliz
 
                 </div>
                     <div class="port-box">
-                        <img src="img/mrkt.jpg" alt="">
+                        <img src="mrkt.jpg" alt="">
                         <div class="port-layer">
                             <h4>affiliate marketing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, a.</p>
@@ -146,7 +146,7 @@ Swiftmoove was founded on the principles of integrity, expertise, and personaliz
                     </div>                  
                     
      <div class="port-box">
-                            <img src="img/prjct3.jpg" alt="">
+                            <img src="prjct3.jpg" alt="">
                             <div class="port-layer">
                                 <h4>content creation</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, a.</p>
@@ -155,7 +155,7 @@ Swiftmoove was founded on the principles of integrity, expertise, and personaliz
             </div>
 
              <div class="port-box">
-                                <img src="img/prgct4.jpg" alt="">
+                                <img src="prgct4.jpg" alt="">
                                 <div class="port-layer">
                                     <h4>content creation</h4>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, a.</p>
